admin form creations

--- a/registration.html
+++ b/registration.html
@@ -67,6 +67,8 @@
     <div class="inner">
         <div class="image-holder">
             <img src=img/logonew.png alt="">
+            <img src=img/logonew.png alt="">
+
         </div>
         <form action="">
             <h3>Register with us</h3>
