--- a/login.html
+++ b/login.html
@@ -118,7 +118,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-user"></i></span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="username">
+                                <input type="text" class="form-control" placeholder="username"/>
 
                             </div>
                             <div class="input-group form-group">
@@ -130,12 +130,14 @@
 
                             <div class="form-group">
                                 <input type="submit" value="Submit" class="btn float-right login_btn">
+
                             </div>
                         </form>
                     </div>
                     <div class="card-footer">
                         <div class="d-flex justify-content-center links">
                             Don't have an account?<a href="registration.html">Sign Up</a>
+                            <a href="dashboard.html">dash</a>
                         </div>
 
                     </div>
@@ -234,4 +236,4 @@
 </html>
 
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
