--- a/checkout.html
+++ b/checkout.html
@@ -357,7 +357,7 @@
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
-                                <button type="submit" class="site-btn">PLACE ORDER</button>
+                                <a href="order.html" style="width: 300px; text-align: center" type="submit" class="site-btn">PLACE ORDER</a>
                             </div>
                         </div>
                     </div>
