--- a/checkout.html
+++ b/checkout.html
@@ -244,7 +244,7 @@
         <div class="container">
 
             <div class="checkout__form">
-                <h4>Billing Details</h4>
+                <h4>Checkout Details</h4>
                 <form action="#">
                     <div class="row">
                         <div class="col-lg-8 col-md-6">
@@ -252,7 +252,7 @@
                                 <div class="col-lg-6">
                                     <div class="checkout__input">
                                         <p>Fist Name<span>*</span></p>
-                                        <input type="text" placeholder="Enter your first name">
+                                        <input type="text" placeholder="Enter your first name" ng-model="">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
