--- a/checkout.html
+++ b/checkout.html
@@ -252,48 +252,47 @@
                                 <div class="col-lg-6">
                                     <div class="checkout__input">
                                         <p>Fist Name<span>*</span></p>
-                                        <input type="text" placeholder="Enter your first name" ng-model="">
+                                        <input type="text" placeholder="Enter your first name" ng-model="check.firstName">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="checkout__input">
                                         <p>Last Name<span>*</span></p>
-                                        <input type="text" placeholder="Enter your last name">
+                                        <input type="text" placeholder="Enter your last name" ng-model="check.lastName">
                                     </div>
                                 </div>
                             </div>
                             <div class="checkout__input">
                                 <p>Country<span>*</span></p>
-                                <input type="text" placeholder="Enter your country">
+                                <input type="text" placeholder="Enter your country" ng-model="check.country">
                             </div>
                             <div class="checkout__input">
                                 <p>Address<span>*</span></p>
-                                <input type="text" placeholder="Street Address" class="checkout__input__add">
-                                <input type="text" placeholder="Apartment, suite, unite ect (optinal)">
+                                <input type="text" placeholder="Street Address" class="checkout__input__add" ng-model="check.address">
                             </div>
                             <div class="checkout__input">
                                 <p>Town/City<span>*</span></p>
-                                <input type="text" placeholder="Enter your town/city">
+                                <input type="text" placeholder="Enter your town/city" ng-model="check.city">
                             </div>
                             <div class="checkout__input">
                                 <p>Country/State<span>*</span></p>
-                                <input type="text" placeholder="Enter your country">
+                                <input type="text" placeholder="Enter your country" ng-model="check.country">
                             </div>
                             <div class="checkout__input">
                                 <p>Postcode / ZIP<span>*</span></p>
-                                <input type="text" placeholder="Enter your postcode">
+                                <input type="text" placeholder="Enter your postcode" ng-model="check.postcode">
                             </div>
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="checkout__input">
                                         <p>Phone<span>*</span></p>
-                                        <input type="text" placeholder="Enter your phone number">
+                                        <input type="text" placeholder="Enter your phone number" ng-model="check.phone">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="checkout__input">
                                         <p>Email<span>*</span></p>
-                                        <input type="text" placeholder="Enter your email">
+                                        <input type="text" placeholder="Enter your email" ng-model="check.email">
                                     </div>
                                 </div>
                             </div>
@@ -319,8 +318,8 @@
                             </div>
                             <div class="checkout__input">
                                 <p>Order notes<span>*</span></p>
-                                <input type="text"
-                                    placeholder="Notes about your order, e.g. special notes for delivery.">
+                                <input type="text" placeholder="Notes about your order, e.g. special notes for delivery."
+                                       ng-model="check.notes">
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6">
@@ -357,7 +356,7 @@
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
-                                <a href="order.html" style="width: 300px; text-align: center" type="submit" class="site-btn">PLACE ORDER</a>
+                                <a href="order.html" ng-click="submit(check)" style="width: 300px; text-align: center" type="submit" class="site-btn">PLACE ORDER</a>
                             </div>
                         </div>
                     </div>
