--- a/contact.html
+++ b/contact.html
@@ -311,20 +311,20 @@
             <form action="#">
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
-                        <input type="text" placeholder="Enter your full name here">
+                        <input type="text" placeholder="Enter your full name here" ng-model="contact.name">
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <input type="text" placeholder="Enter your Email here">
+                        <input type="text" placeholder="Enter your Email here" ng-model="contact.email">
                     </div>
                     <div class="col-lg-6 col-lg-6">
-                        <input type="text" placeholder="Enter telephone number here">
+                        <input type="text" placeholder="Enter telephone number here" ng-model="contact.phone">
                     </div>
                     <div class="col-lg-6 col-lg-6">
-                        <input type="text" placeholder="Enter address here">
+                        <input type="text" placeholder="Enter address here" ng-model="contact.address">
                     </div>
                     <div class="col-lg-12 text-center">
-                        <textarea placeholder="Enter your message here"></textarea>
-                        <button type="submit" class="site-btn">SEND MESSAGE</button>
+                        <textarea placeholder="Enter your message here" ng-model="contact.msg"></textarea>
+                        <button ng-click="submit(contact)" type="submit" class="site-btn">SEND MESSAGE</button>
                     </div>
                 </div>
             </form>
