--- a/deliverer.html
+++ b/deliverer.html
@@ -23,18 +23,7 @@
         </div>
         <nav class="navbar navbar-header navbar-expand-lg">
             <div class="container-fluid">
-
-                <form class="navbar-left navbar-form nav-search mr-md-3" action="">
-                    <div class="input-group">
-                        <input type="text" placeholder="Search ..." class="form-control">
-                        <div class="input-group-append">
-								<span class="input-group-text">
-									<i class="la la-search search-icon"></i>
-								</span>
-                        </div>
-                    </div>
-                </form>
-                <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+<ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
                     <li class="nav-item dropdown hidden-caret">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="la la-envelope"></i>
@@ -229,49 +218,67 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
-                                <div class="card-title">Add Deliverer to the system</div>
+                                <div class="row">
+                                    <div class="col-lg-8">
+                                        <div class="card-title">Add Deliverer to the system</div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <form class="navbar-right navbar-form nav-search mr-md-3" action="">
+                                            <div class="input-group">
+                                                <input type="text" placeholder="Search ..." class="form-control" ng-model=""
+                                                       uib-typeahead="" />
+                                                <div class="input-group-append">
+                                    								<span class="input-group-text">
+                                    									<i class="la la-search search-icon"></i>
+                                    								</span>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
                             </div>
                             <div class="card-body">
                                 <div class="form-group">
                                     <label for="firstName">First name</label>
-                                    <input type="text" class="form-control" id="firstName" placeholder="First name">
+                                    <input type="text" class="form-control" id="firstName" placeholder="First name" ng-model="deliver.firstName">
                                 </div>
                                 <div class="form-group">
                                     <label for="lastName">Last name</label>
-                                    <input type="text" class="form-control" id="lastName" placeholder="Last name">
+                                    <input type="text" class="form-control" id="lastName" placeholder="Last name" ng-model="deliver.lastName">
                                 </div>
                                 <div class="form-group">
                                     <label for="address">Address</label>
-                                    <input type="text" class="form-control" id="address" placeholder="Address">
+                                    <input type="text" class="form-control" id="address" placeholder="Address" ng-model="deliver.address">
                                 </div>
                                 <div class="form-group">
                                     <label for="district">District</label>
-                                    <input type="text" class="form-control" id="district" placeholder="District">
+                                    <input type="text" class="form-control" id="district" placeholder="District" ng-model="deliver.district">
                                 </div>
                                 <div class="form-group">
                                     <label for="province">Province</label>
-                                    <input type="text" class="form-control" id="province" placeholder="Province">
+                                    <input type="text" class="form-control" id="province" placeholder="Province" ng-model="deliver.province">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="contactNo">Contact Number</label>
-                                    <input type="text" class="form-control" id="contactNo" placeholder="Contact Number">
+                                    <input type="text" class="form-control" id="contactNo" placeholder="Contact Number" ng-model="deliver.contact">
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Email">
+                                    <input type="email" class="form-control" id="email" placeholder="Email" ng-model="deliver.email">
                                 </div>
                                 <div class="form-group">
                                     <label for="NIC">NIC Number</label>
-                                    <input type="text" class="form-control" id="NIC" placeholder="NIC">
+                                    <input type="text" class="form-control" id="NIC" placeholder="NIC" ng-model="deliver.NIC">
                                 </div>
                                 <div class="form-group">
                                     <label for="drivingLicenseNo">Driving license number</label>
-                                    <input type="text" class="form-control" id="drivingLicenseNo" placeholder="Driving license number">
+                                    <input type="text" class="form-control" id="drivingLicenseNo" placeholder="Driving license number"
+                                           ng-model="deliver.licenseNo">
                                 </div>
                                 <div class="form-group">
                                     <label for="vehicleType">Vehicle type</label>
-                                    <select class="form-control" id="vehicleType">
+                                    <select class="form-control" id="vehicleType" ng-model="deliver.vehicleType">
                                         <option>Select</option>
                                         <option>Car</option>
                                         <option>Van</option>
@@ -282,16 +289,16 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="vehicleNo">Vehicle number</label>
-                                    <input type="text" class="form-control" id="vehicleNo" placeholder="Vehicle number">
+                                    <input type="text" class="form-control" id="vehicleNo" placeholder="Vehicle number" ng-model="deliver.VehicleNo">
                                 </div>
                                 <div class="form-check">
                                     <label>Is active</label><br/>
                                     <label class="form-radio-label">
-                                        <input class="form-radio-input" type="radio" name="optionsRadios" value=""  checked="">
+                                        <input class="form-radio-input" type="radio" name="optionsRadios" value=""  checked="" ng-model="deliver.yes">
                                         <span class="form-radio-sign">Yes</span>
                                     </label>
                                     <label class="form-radio-label ml-3">
-                                        <input class="form-radio-input" type="radio" name="optionsRadios" value="">
+                                        <input class="form-radio-input" type="radio" name="optionsRadios" value="" ng-model="deliver.no">
                                         <span class="form-radio-sign">No</span>
                                     </label>
                                 </div>
@@ -303,7 +310,7 @@
                                 </div>
                             </div>
                             <div class="card-action">
-                                <button class="btn btn-success">Submit</button>
+                                <button ng-click="submit(deliver)" class="btn btn-success">Submit</button>
                                 <button class="btn btn-danger">Cancel</button>
                             </div>
                         </div>
