--- a/rating.html
+++ b/rating.html
@@ -24,16 +24,6 @@
         <nav class="navbar navbar-header navbar-expand-lg">
             <div class="container-fluid">
 
-                <form class="navbar-left navbar-form nav-search mr-md-3" action="">
-                    <div class="input-group">
-                        <input type="text" placeholder="Search ..." class="form-control">
-                        <div class="input-group-append">
-								<span class="input-group-text">
-									<i class="la la-search search-icon"></i>
-								</span>
-                        </div>
-                    </div>
-                </form>
                 <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
                     <li class="nav-item dropdown hidden-caret">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -229,24 +219,44 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
-                                <div class="card-title">Add rating to the system</div>
+                                <div class="row">
+                                    <div class="col-lg-8">
+                                        <div class="card-title">Add rating to the system</div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <form class="navbar-right navbar-form nav-search mr-md-3" action="">
+                                            <div class="input-group">
+                                                <input type="text" placeholder="Search ..." class="form-control" ng-model=""
+                                                       uib-typeahead="" />
+                                                <div class="input-group-append">
+                                    								<span class="input-group-text">
+                                    									<i class="la la-search search-icon"></i>
+                                    								</span>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+
                             </div>
                             <div class="card-body">
                                 <div class="form-group">
                                     <label for="sellerId">Seller id</label>
-                                    <input type="text" class="form-control" id="sellerId" placeholder="Seller id">
+                                    <input type="text" class="form-control" id="sellerId" placeholder="Seller id"
+                                           ng-model="rate.sellerId">
                                 </div>
                                 <div class="form-group">
                                     <label for="delivererId">Deliverer id</label>
-                                    <input type="text" class="form-control" id="delivererId" placeholder="Deliverer id">
+                                    <input type="text" class="form-control" id="delivererId" placeholder="Deliverer id"
+                                           ng-model="rate.delivererId">
                                 </div>
                                 <div class="form-group">
                                     <label for="rateValue">Rate Value</label>
-                                    <input type="number" class="form-control" id="rateValue" placeholder="Rate Value">
+                                    <input type="number" class="form-control" id="rateValue" placeholder="Rate Value" ng-model="rate.rateValue">
                                 </div>
                                 <div class="form-group">
                                     <label for="note">Note</label>
-                                    <textarea class="form-control" id="note" rows="5">
+                                    <textarea class="form-control" id="note" rows="5" ng-model="rate.note">
                                     </textarea>
                                 </div>
                                 <div class="form-check">
@@ -257,7 +267,7 @@
                                 </div>
                             </div>
                             <div class="card-action">
-                                <button class="btn btn-success">Submit</button>
+                                <button ng-click="submit(rate)" class="btn btn-success">Submit</button>
                                 <button class="btn btn-danger">Cancel</button>
                             </div>
                         </div>
